--- a/D - React-Learning/06_Passing_Children/src/components/Container.module.css
+++ b/D - React-Learning/06_Passing_Children/src/components/Container.module.css
@@ -1,8 +1,8 @@
 .container {
-  width: 250px;
-  border: 1.5px solid rgb(125, 125, 125);
+  border: 1px solid rgb(125, 125, 125);
   border-radius: 5px;
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-color: rgb(255, 226, 255);
 }
